# Charles-Inventory

./: .bashrc  .cshrc  .synopsys_dc.setup  .vimrc  .zshrc  CMakeLists.txt  CppLearningNotes.cpp  Dockerfile.dockerfile  Makefile.config  README.md  WriteFileVerilog.py  dc_comb.tcl  dc_seq.tcl  docker_cmd.txt  merge_master  one_hot_encoder.v  testbench.v  thermal_encode.v  vivado_seq_const.xdc  win_terminal_settings.json
cpp_algorithm/: CSD.cpp  SIMD.cpp  convertToRadixN.cpp  loopTiling.cpp
fpga_asic/: run_vcs.sh  signal_mem_wiring_tb.v
fpga_asic/aisc_synthesize/: Makefile  constraint.tcl  dc_comb.tcl  filelist
fpga_asic/common_blocks/: Mult.v  signal_mem_wiring.v  signal_mem_wiring_tb.v
fpga_asic/example_design/: barrel_shift.v  mem_wiring.v
fpga_asic/fpga_sdk_c_code/: sdk_rd_wr_timing_example.c
fpga_asic/fpga_synthesize/: Timing_constraint.xdc
fpga_asic/synthesize/: Timing_constraint.xdc  vivado_comb_constraint.xdc  vivado_seq_constraint.xdc
fpga_asic/testbench/: signal_mem_wiring_tb.v  with_valid_tb.v
linux_bash/: disk_opeartion.sh  grant_folder_permission.sh
pytorch/: ResNet.py  backward-hook.ipynb  onnx-add-edge-to-the-graph.py  pytorch_note.md  train-cifar10.py
